some styling but no upload images :(

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,7 @@
-<h1 style="text-align: center">Here is the list of lists</h1>
+<div class="card-title" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1514306191717-452ec28c7814?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80)">
+  <h1> Create your own movies selection 🍿 </h1>
+</div>
+
 
 <ul>
     <% @lists.each do |list| %>
