--- a/app/assets/stylesheets/components/_topcard.scss
+++ b/app/assets/stylesheets/components/_topcard.scss
@@ -1,7 +1,7 @@
 .card-title {
   background-size: cover;
   background-position: center;
-  height: 250px;
+  height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,4 +11,5 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  margin-bottom: 20px;
 }
